search bar collapse fix on mobile

--- a/src/flask/static/style.css
+++ b/src/flask/static/style.css
@@ -312,7 +312,11 @@ body {
 }
 
 @media only screen and (min-width : 768px) {
-  .container, .main {
+  .main {
     padding-left: 450px;
   }
+}
+
+.container {
+  width: 100vw;
 }
